--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,8 @@
         android:text="@string/name"
         tools:layout_editor_absoluteX="72dp"
         tools:layout_editor_absoluteY="307dp" />
+    
+    contoh ada perubahan
 
 
 </RelativeLayout>
